--- a/modern-react/src/styles/App.css
+++ b/modern-react/src/styles/App.css
@@ -31,10 +31,11 @@ a {
   /* global 92%+ browsers support */
   background:radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%);
 
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-gradient__text{
-  background: var(--color-text);
+.gradient__text{
+  background: var(--gradient-text);
   background-clip: text;
   -webkit-background-clop: text;
   -webkit-text-fill-color: transparent;
